app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree ../../../vendor/assets/stylesheets/.
 *= require_tree .
 *= require_self
 //= depend_on_asset "bootstrap/glyphicons-halflings-regular.eot"
 //= depend_on_asset "bootstrap/glyphicons-halflings-regular.woff"
 //= depend_on_asset "bootstrap/glyphicons-halflings-regular.ttf"
 //= depend_on_asset "bootstrap/glyphicons-halflings-regular.svg"
 */
/*@import "bootstrap";*/
/* Some Style from the Bootstrap Default Theme */

section.user-page-module {
  padding-top: 70px;
  padding-bottom: 70px;
}

#start-new-button {
  margin-bottom: 20px;
}

div.whole-comment {
 padding-top: 18px;
 clear: both;
}

@mixin vertical-align {
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

div.project-user-comment-body {
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

div.project-user-comment-picture {
  padding-right: 5px;
  float: left; 
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

div.comment-input {
  padding-bottom: 30px;
}

div#mic-visualizer {
  padding-top: 35px;
  padding-bottom: 40px;
}

div#controls {
  padding-top: 10px;
  padding-bottom: 10px;
}

button.btn-long {
  width: 15%;
}

div.main {
  margin-top: 50px;
}

.theme-dropdown .dropdown-menu {
  position: static;
  display: block;
  margin-bottom: 20px;
}

.theme-showcase > p > .btn {
  margin: 5px 0;
}

@-webkit-keyframes glowing {
  0% { background-color: #d9534f; -webkit-box-shadow: 0 0 3px #d9534f; }
  50% { background-color: #FF0000; -webkit-box-shadow: 0 0 18px #FF0000; }
  100% { background-color: #d9534f; -webkit-box-shadow: 0 0 3px #d9534f; }
}

@-moz-keyframes glowing {
  0% { background-color: #d9534f; -moz-box-shadow: 0 0 3px #d9534f; }
  50% { background-color: #FF0000; -moz-box-shadow: 0 0 18px #FF0000; }
  100% { background-color: #d9534f; -moz-box-shadow: 0 0 3px #d9534f; }
}

@-o-keyframes glowing {
  0% { background-color: #d9534f; box-shadow: 0 0 3px #d9534f; }
  50% { background-color: #FF0000; box-shadow: 0 0 18px #FF0000; }
  100% { background-color: #d9534f; box-shadow: 0 0 3px #d9534f; }
}

@keyframes glowing {
  0% { background-color: #d9534f; box-shadow: 0 0 3px #d9534f; }
  50% { background-color: #FF0000; box-shadow: 0 0 18px #FF0000; }
  100% { background-color: #d9534f; box-shadow: 0 0 3px #d9534f; }
}

#recorderStop.btn.btn-danger.btn-round.btn-long  {
  -webkit-animation: glowing 1500ms infinite;
  -moz-animation: glowing 1500ms infinite;
  -o-animation: glowing 1500ms infinite;
  animation: glowing 1500ms infinite;
}

#recorderStart.btn.btn-danger.btn-round.btn-long  {
  -webkit-animation: none;
  -moz-animation: none;
  -o-animation: none;
  animation: none;
}

/*#playAll.btn.btn-danger.btn-round.btn-long*/

.btn:focus {
  outline: none;
}

